# iai_maps

./: .gitignore
iai_hsr_robocup/: CMakeLists.txt  README.md  export_owl.sh  package.xml
iai_hsr_robocup/config/: example_sem_map_data.yaml
iai_hsr_robocup/launch/: hsr_maps.launch  hsr_robocup_with_state_publisher.launch
iai_hsr_robocup/owl/: HSR_robocup.owl
iai_hsr_robocup/urdf/: HSR_robocup.urdf  HSR_robocup.urdf.xacro  HSR_shelf.urdf.xacro  HSR_table.urdf.xacro  props.yaml
iai_hsr_robocup/yaml/: README.md  region_filter_setup.py  semantic_map_manual_data.yaml  semantic_map_manual_data.yaml.iai_map  semantic_map_manual_data.yaml.robocup_environment
iai_kitchen/meshes/misc/: square_table.dae  square_table.stl
iai_kitchen/urdf/: IAI_kitchen.urdf.xacro  IAI_tables.urdf.xacro
iai_maps/launch/: hsr_maps.launch  iai_maps.launch
