<?xml version="1.0"?>
<package format="2">
  <name>iai_hsr_robocup</name>
  <version>0.0.0</version>
  <description>The iai_hsr_robocup package, containing the xacro-urdf of a table and a shelf.</description>
  <maintainer email="artnie@cs.uni-bremen.de">Arthur Niedzwiecki</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
</package>
